Make Harmony colors apply by default for all OSes

r598108 made GG900 primary text color in GetAuraColor / common_theme.cc
which made the ShouldIgnoreHarmonySpec check (kColorId_LabelEnabledColor
== SK_ColorBLACK) fail. This caused the Harmony colors to be ignored
for OSes outside Windows that use the default aura colors.

This change meant that GetHarmonyTextColorForNonStandardNativeTheme was
pretty much always used for colors, instead of using the Harmony colors.

Bug: chromium:896891
Change-Id: I394e25d2eda5da5c0bb0532056d6eebff2a855c2
Reviewed-on: https://chromium-review.googlesource.com/c/1308901
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604109}
Former-commit-id: b8c0c549ca867aa69cdfa5865d2f45504256cee0